2012-03-22  Vanessa Gil  <vanessa.gil@artica.es>

	* pandoradb.sql
	  pandoradb.postgreSQL.sql
	  pandoradb.oracle.sql,
	  extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql,
	  extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql,
	  extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql: added 'operation'
	to treport_content_item table.

	* godmode/reporting/reporting_builder.item_editor.php
	  include/functions_reporting.php
	  include/ajax/reporting.ajax.php
	  include/javascript/pandora.js: Added operation: sum,max,min or avg to
	global reports.

	* images/sum.png
	  images/avg.png
	  images/min.png
	  images/max.png: Added icons.

2012-03-22  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	  include/graphs/pChart/pDraw.class.php: Added to pchart library the
	parameter to set an independent font size to graph ticks and set it
	on the graph charts one point less

2012-03-22 Miguel de Dios  <miguel.dedios@artica.es>
	& Sergio Martin <sergio.martin@artica.es> using Gobby collaborative
	real-time editor http://obby.0x539.de
	
	* include/functions.php: changed into the function "get_report_types" the
	array types to tree for show better the select box, and changed into the
	function "get_report_name".
	
	* include/functions_forecast.php: fixed into the function
	"forecast_projection_graph" when zero data and change to user the user conf
	style for the dates.

	* include/functions_html.php: the function "html_debug_print" was improved
	to show type and sizes.

	* include/functions_reporting.php: renamed the function "header_content" to
	"reporting_header_content" and in this function change to use the user conf
	style for the dates.
	
	* include/functions_networkmap.php: cleaned source code style.
	
	Merged from the branch pandora_4.0
	

2012-03-22  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/graph_builder.php: Reallocate 
	the "View graph" button to the original place in
	the combined graphs section
